# Limit-Order-Book-Simulation

./: CMakeLists.txt  PROJECT_STRUCTURE.md  constants.py  run.sh
cpp/: CMakeLists.txt
cpp/include/data/: constants.hpp
cpp/include/infra/: binary_trade_logger.hpp  monotonic_trade_id_generator.hpp  trade_id_generator.hpp  trade_logger.hpp
cpp/include/models/: execution_engine.hpp  market_structure_snapshot.hpp  matching_engine.hpp  order.hpp  order_book.hpp  order_index.hpp  order_lifecycle.hpp  trade.hpp
cpp/include/policy/: order_lifecycle.hpp  order_validation.hpp  self_trade_prevention.hpp
cpp/include/utils/: order_utils.hpp
cpp/src/data/: constants.cpp
cpp/src/models/: order.cpp
cpp/test/: CMakeLists.txt
cpp/test/infra/: test_binary_trade_logger.cpp  test_trade_id_generator.cpp
cpp/test/models/: test_execution_engine.cpp  test_matching_engine_execution.cpp  test_matching_engine_match.cpp  test_matching_engine_stp.cpp  test_matching_engine_validation.cpp  test_order.cpp  test_order_book.cpp  test_order_index.cpp  test_trade.cpp
cpp/test/policy/: test_self_trade_prevention.cpp
cpp/test/utils/: test_order_utils.cpp
models/: order.py  price.py
python/: constants.py
python/models/: order.py
